--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+</head>
 <html>
 <body>
-<div>这里什么都没有</div>
+<div><a href='/amz/'>亚马逊优惠信息</a></div>
 </body>
 </html>
