--- a/amz/index.html
+++ b/amz/index.html
@@ -14,7 +14,7 @@
       line-height: 50px;
       text-align: center;
       font-weight: 700;
-      width: 200px;
+      width: 100px!important;
       height: 50px;
       vertical-align: bottom;
       font-size: 20px;
@@ -100,6 +100,9 @@
       padding:5px;
       margin:5px;
     }
+    .item-card:hover{
+      box-shadow: #ff0 0 -2px 10px;
+    }
 
     .item-img {
       height: 100px;
@@ -112,11 +115,11 @@
       white-space: normal;
       text-overflow: ellipsis;
     }
-    .preis{
-      color:black;
-    }
     .rabatt{
       color:red;
+    }
+    a{
+      text-decoration: none;
     }
   </style>
 
@@ -151,65 +154,66 @@
     <!-- 标签页内容部分 -->
     <div id="Tab1" class="tabcontent" style="display:block;">
       <div class="item-container">
-        <div class='item-card'><a
+        <a
             href="https://www.amazon.de/Naturino-Ni%C3%B1o-Zapatos-abiertos-Sandalias/dp/B07N99VMKY?tag=xunshoushi-21"
-            target="_blank"><img class="item-img"
+            target="_blank">
+        <div class='item-card'><img class="item-img"
               src="https://m.media-amazon.com/images/I/71M8AF7q0rL._AC_UL320_.jpg"><br>
-          <div class='item-title'>Naturino WAD-Halboffener Lederschuh-Hellblau </div></a>现价:28.14 折扣:-64.47%
-        </div>
+          <div class='item-title'>Naturino WAD-Halboffener Lederschuh-Hellblau </div>现价:28.14 折扣:<span class="rabatt">-63.67%</span>
+        </div></a>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-PUFFY-Halb-geschlossene-Sandale-braun/dp/B07MFV973N?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/610+VTV8UtL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino Unisex Baby Puffy Sandalen </div>现价:30.08 折扣:-63.67%
+          <div class='item-title'>Naturino Unisex Baby Puffy Sandalen </div>现价:30.08 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-Kinder-Sandalen-C08-606983/dp/B07L13ZFQH?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/71Fm6-5dCqL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:31.05 折扣:-62.59%
+          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:31.05 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-PUFFY-Halb-geschlossene-Sandale-gelb/dp/B07VZYMHWP?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/71FmKE9PAqL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:31.34 折扣:-62.15%
+          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:31.34 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-Eindhoven-Krippenschuh-Hellblau-Milk/dp/B0B9XLJ7BQ?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/61GHVpCCs6L._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino Eindhoven VL-Sneakers aus Leder mit Print </div>现价:37.5 折扣:-61.73%
+          <div class='item-title'>Naturino Eindhoven VL-Sneakers aus Leder mit Print </div>现价:37.5 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-M%C3%A4dchen-Cocoon-Gymnastikschuhe-Pink/dp/B07M7K7B7N?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/6154iIiiMbL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino Cocoon-Lauflernschuh aus Nappleder-Altrosa </div>现价:31.94 折扣:-55.01%
+          <div class='item-title'>Naturino Cocoon-Lauflernschuh aus Nappleder-Altrosa </div>现价:31.94 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Naturino-PUFFY-Halb-geschlossene-Sandale-blau/dp/B07MQ9N7DZ?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/71sJPnjLcjL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:41 折扣:-50.48%
+          <div class='item-title'>Naturino PUFFY-Halb geschlossene Sandalen </div>现价:41 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Superfit-Baby-Jungen-Ulli-Lauflernschuh-blau/dp/B09SLNXNLS?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/61VXOe9p1mL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Superfit Baby-Jungen Ulli Lauflernschuh </div>现价:23.16 折扣:-69.10%
+          <div class='item-title'>Superfit Baby-Jungen Ulli Lauflernschuh </div>现价:23.16 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Superfit-Breeze-Sneaker-BLAU-20/dp/B099NPQ8LG?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/512hqFTaezL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Superfit Jungen Breeze Lauflernschuhe </div>现价:20.1 折扣:-66.47%
+          <div class='item-title'>Superfit Jungen Breeze Lauflernschuhe </div>现价:20.1 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Superfit-Bumblebee-Sandale-GR%C3%9CN-HELLGR%C3%9CN/dp/B0B9HN59S5?tag=xunshoushi-21"
             target="_blank"><img class="item-img"
               src="https://m.media-amazon.com/images/I/71DEcaAlIiL._AC_UL320_.jpg"></a><br>
-          <div class='item-title'>Superfit Jungen Bumblebee Sandale </div>现价:25.71 折扣:-60.42%
+          <div class='item-title'>Superfit Jungen Bumblebee Sandale </div>现价:25.71 折扣:<span class="rabatt">-63.67%</span>
         </div>
         <div class='item-card'><a
             href="https://www.amazon.de/Superfit-Sunny-Sandale-LILA-PINK/dp/B0B9HJSW35?tag=xunshoushi-21"
