--- a/amz/index.html
+++ b/amz/index.html
@@ -105,8 +105,8 @@
     }
 
     .item-img {
-      max-height: 100px;
-      max-width: 200px;
+      height: 100px;
+      width: 200px;
     }
 
     .item-title {
