--- a/amz/index.html
+++ b/amz/index.html
@@ -123,6 +123,12 @@
     a{
       text-decoration: none;
     }
+    @media screen and (max-width: 480px) {
+      .tablinks {
+        width:33vw;
+        height:80px;
+      }
+    }
   </style>
 
   <script>
