--- a/amz/index.html
+++ b/amz/index.html
@@ -123,7 +123,7 @@
     a{
       text-decoration: none;
     }
-    @media screen and (max-width: 961px) {
+    @media screen and (orientation: portrait) {
       .tablinks {
         width:25vw;
         height:80px;
@@ -151,7 +151,7 @@
 </head>
 
 <body>
-  <div class="logo"></div>
+  <div class="logo"><img style="height:" src="/amz/yangmaochang.png"></div>
   
   <div class="tab-body">
     <!-- 标签页部分 -->
