--- a/amz/index.html
+++ b/amz/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body>
-  <div class="logo"><img style="height:" src="/amz/yangmaochang.png"></div>
+  <div class="logo"><img style="height:200px;" src="/amz/yangmaochang.png"></div>
   
   <div class="tab-body">
     <!-- 标签页部分 -->
