--- a/amz/index.html
+++ b/amz/index.html
@@ -126,7 +126,8 @@
     @media screen and (orientation: portrait) {
       .tablinks {
         width:25vw;
-        height:80px;
+        height:100px;
+        line-height:100px;
       }
     }
   </style>
