--- a/amz/index.html
+++ b/amz/index.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8">
   <title>驯兽师羊毛厂</title>
   <style>
+    :root {
+      --tabcolor1: #55a136;
+      --tabcolor2: #ebe153;
+      --tabcolor3: #859688;
+      --tabcolor4: #5bbbd8;
+      --tabcolor5: #74a0d3;
+    }
+
     body {
       background-color: #eee;
       color: #115;
@@ -22,28 +30,28 @@
       background-color: blue;
       color: white;
       z-index: 1;
-      border-radius: 5px 5px 0 0;
+      border-radius: 50px 50px 0 0;
       cursor: pointer;
     }
 
     .tablinks:nth-child(1) {
-      background-color: #0b486b;
+      background-color: var(--tabcolor1);
     }
 
     .tablinks:nth-child(2) {
-      background-color: #3b8686;
+      background-color: var(--tabcolor2);
     }
 
     .tablinks:nth-child(3) {
-      background-color: #79bd9a;
+      background-color: var(--tabcolor3);
     }
 
     .tablinks:nth-child(4) {
-      background-color: #5bbbd8;
+      background-color: var(--tabcolor4);
     }
 
     .tablinks:nth-child(5) {
-      background-color: #74a0d3;
+      background-color: var(--tabcolor5);
     }
 
     .tablinks.active {
@@ -54,28 +62,28 @@
     }
 
     .tablinks:nth-child(1).active {
-      border-left: 3px solid #0b486b;
-      color: #0b486b;
+      border-left: 3px solid var(--tabcolor1);
+      color: var(--tabcolor1);
     }
 
     .tablinks:nth-child(2).active {
-      border-left: 3px solid #3b8686;
-      color: #3b8686;
+      border-left: 3px solid var(--tabcolor2);
+      color: var(--tabcolor2);
     }
 
     .tablinks:nth-child(3).active {
-      border-left: 3px solid #79bd9a;
-      color: #79bd9a;
+      border-left: 3px solid var(--tabcolor3);
+      color: var(--tabcolor3);
     }
 
     .tablinks:nth-child(4).active {
-      border-left: 3px solid #5bbbd8;
-      color: #5bbbd8;
+      border-left: 3px solid var(--tabcolor4);
+      color: var(--tabcolor4);
     }
 
     .tablinks:nth-child(5).active {
-      border-left: 3px solid #74a0d3;
-      color: #74a0d3;
+      border-left: 3px solid var(--tabcolor5);
+      color: var(--tabcolor5);
     }
 
     .tabcontent {
@@ -95,12 +103,13 @@
 
     .item-card {
       width: 200px;
-      border:1px #888 solid;
+      border: 1px #888 solid;
       border-radius: 5px;
-      padding:5px;
-      margin:5px;
+      padding: 5px;
+      margin: 5px;
     }
-    .item-card:hover{
+
+    .item-card:hover {
       box-shadow: #ff0 0 -2px 10px;
     }
 
@@ -112,22 +121,26 @@
 
     .item-title {
       height: 34px;
-      font-size: 12px;
+      font-size: 15px;
       overflow: hidden;
       white-space: normal;
       text-overflow: ellipsis;
     }
-    .rabatt{
-      color:red;
+
+    .rabatt {
+      color: red;
     }
-    a{
+
+    a {
       text-decoration: none;
+      color: #333;
     }
+
     @media screen and (orientation: portrait) {
       .tablinks {
-        width:25vw;
-        height:100px;
-        line-height:100px;
+        width: 25vw;
+        height: 100px;
+        line-height: 100px;
       }
     }
   </style>
@@ -137,23 +150,23 @@
       FillHtml(0);
     };
 
-    function FillHtml(tab){
-      const item_container=document.getElementsByClassName("item-container")[tab];
-      if(item_container.textContent.includes('价')){
+    function FillHtml(tab) {
+      const item_container = document.getElementsByClassName("item-container")[tab];
+      if (item_container.textContent.includes('价')) {
         return;
       }
-      fetch('../amz/tabcontent'+tab+'.html')
-            .then(function(response) {
-            return response.text();
+      fetch('../amz/tabcontent' + tab + '.html')
+        .then(function (response) {
+          return response.text();
         })
-            .then(function(responsetext) {
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(responsetext, "text/html");
-            const content=doc.getElementsByTagName('div')[0].innerHTML;
-            item_container.innerHTML=content;
+        .then(function (responsetext) {
+          const parser = new DOMParser();
+          const doc = parser.parseFromString(responsetext, "text/html");
+          const content = doc.getElementsByTagName('div')[0].innerHTML;
+          item_container.innerHTML = content;
         })
-            .catch(function(err) {
-            console.log(err);
+        .catch(function (err) {
+          console.log(err);
         });
     }
 
