--- a/amz/index.html
+++ b/amz/index.html
@@ -121,7 +121,7 @@
 
     .item-title {
       height: 34px;
-      font-size: 15px;
+      line-height: 17px;
       overflow: hidden;
       white-space: normal;
       text-overflow: ellipsis;
