--- a/amz/index.html
+++ b/amz/index.html
@@ -229,7 +229,7 @@
 
   <div style="margin-top:5em;"> </div>
   <hr>
-  <span>如果你有想要关注的产品类别或者品牌欢迎留言或私信<a href='https://www.xiaohongshu.com/user/profile/5ca6706d0000000017012907'>小红书@吞金兽驯兽师。</a></span>
+  <span>该网页产品仅在德亚中比价不一定是全网最低价！如果你有想要关注的产品类别或者品牌欢迎留言或私信<a href='https://www.xiaohongshu.com/user/profile/5ca6706d0000000017012907'>小红书@吞金兽驯兽师。</a></span>
 </body>
 
 </html>
