--- a/amz/index.html
+++ b/amz/index.html
@@ -137,6 +137,9 @@
       content:'更新于';
       color:#bbb;
     }
+    .red{
+      border: 2px solid red;
+    }
 
     @media screen and (orientation: portrait) {
       .tablinks {
