--- a/amz/index.html
+++ b/amz/index.html
@@ -209,9 +209,15 @@
     <div class="tablinks active" onclick="openTab(event, 0)">穿</div>
     <div class="tablinks" onclick="openTab(event, 1)">玩</div>
     <div class="tablinks" onclick="openTab(event, 2)">用</div>
+    <div class="tablinks" onclick="openTab(event, 3)">运动</div>
 
     <!-- 标签页内容部分 -->
     <div class="tabcontent" style="display:block;">
+      <div class="item-container">
+      </div>
+    </div>
+
+    <div class="tabcontent">
       <div class="item-container">
       </div>
     </div>
