--- a/amz/index.html
+++ b/amz/index.html
@@ -140,6 +140,9 @@
     .red{
       border: 4px solid red;
     }
+    .part-name{
+      margin-top:10px;
+    }
 
     @media screen and (orientation: portrait) {
       .tablinks {
