--- a/amz/index.html
+++ b/amz/index.html
@@ -152,6 +152,13 @@
         font-size:50px;
         border-radius: 100px 100px 0 0;
       }
+      .item-card {
+        width: 300px;
+      }
+      .item-img {
+        height: 150px;
+        width: 300px;
+      }
     }
   </style>
 
