--- a/amz/index.html
+++ b/amz/index.html
@@ -153,11 +153,11 @@
         border-radius: 100px 100px 0 0;
       }
       .item-card {
-        width: 300px;
+        width: 28vw;
       }
       .item-img {
         height: 150px;
-        width: 300px;
+        width: 28vw;
       }
     }
   </style>
