--- a/amz/index.html
+++ b/amz/index.html
@@ -161,7 +161,15 @@
       }
     }
   </style>
-
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?55055d11c89810e417fd8340a852c2ab";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
   <script>
     window.onload = () => {
       FillHtml(0);
