--- a/index.html
+++ b/index.html
@@ -1,9 +1,148 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-</head>
 <html>
+
+<head>
+    <meta name="description" content="羊毛厂">
+    <meta name="keywords" content="攀爬架, 爬爬架, quadro, 好好搭,吞金兽驯兽师">
+    <meta name="apple-mobile-web-app-title" content="羊毛厂">
+    <style>
+        .tab-btn-area {
+            display: flex;
+        }
+
+        .tab-btn {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            border: 1px solid grey;
+            border-radius: 10px;
+            text-align: center;
+            padding: 5px 10px;
+            margin: 10px;
+        }
+
+        .tab-btn.active {
+            background: rgb(197, 224, 180);
+        }
+
+        .tab-page {
+            display: none;
+        }
+
+        .tab-page.active {
+            display: block;
+        }
+
+        .yangmaochang {
+            background: rgb(197, 224, 180);
+            text-align: center;
+            border-radius: 10px;
+            padding: 10px 20px;
+            width: fit-content;
+            margin:10px;
+        }
+
+        .tab-page>img {
+            display:block;
+            max-width: 100%;
+            max-height: 100%;
+        }
+    </style>
+    <script>
+        function showTab(n) {
+            const tabBtns = document.getElementsByClassName("tab-btn");
+            const tabPages = document.getElementsByClassName("tab-page");
+            for (let i = 0; i < tabBtns.length; i++) {
+                tabBtns[i].classList.remove('active');
+                tabPages[i].classList.remove('active');
+                if (i == n) {
+                    if (!tabBtns[i].classList.contains('active')) {
+                        tabBtns[i].classList.add('active');
+                        tabPages[i].classList.add('active');
+                    }
+                }
+            }
+        }
+        function clip(t) {
+            const textToCopy = t.getAttribute('tb-code');
+            navigator.clipboard.writeText(textToCopy).then(() => {
+                alert("淘口令已复制，请打开淘宝app查看详情");
+            }).catch(err => {
+                console.error('复制失败', err);
+            });
+        }
+    </script>
+</head>
+
 <body>
-<div><a href='/amz/'>亚马逊优惠信息</a></div>
+    <div class="logo">
+        <img src="logo.webp" style="width:50%" />
+    </div>
+    <div class="tab-btn-area">
+        <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
+        <div class="tab-btn" onclick="showTab(1)">选品二<br></div>
+        <div class="tab-btn" onclick="showTab(2)">选品三<br>过河石</div>
+        <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
+    </div>
+    <div class="tab-page-area">
+        <div class="tab-page active">
+            <img src="1quadroDE.webp" />
+            <a href="https://m.tb.cn/h.giP1tJM" target="_blank">【下单链接】https://m.tb.cn/h.giP1tJM</a>
+        </div>
+        <!--end of tab1-->
+        <div class="tab-page">
+            <img src="2shiji.webp" />
+            <img src="2yangmao.webp" />
+            <img src="2kuaituantuan.webp" />
+        </div>
+        <!--end of tab2-->
+        <div class="tab-page">
+            <img src="3shi.webp" /><br>
+            <a href="https://m.tb.cn/h.g7BZMq8" target="_blank">【下单链接】https://m.tb.cn/h.g7BZMq8</a>
+            <br>
+            <div class="yangmaochang">
+                <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
+                <b style="display:inline-block;border:2px rgb(112,173,71) solid;border-radius:5px;padding:2px 4px;cursor:pointer;"
+                    onclick="clip(this);" tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/">点击下单链接/<br>点击此处复制淘口令</b><br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                打开淘宝查看商品<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                下单购买商品，先不付款<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                截屏发给吞金兽驯兽师<br>
+                并在客服留言#吞金兽驯兽师<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                商家后台改价<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                👍付款完成购买
+            </div>
+        </div>
+        <!--end of tab3-->
+        <div class="tab-page">
+            <img src="3dangang.webp" /><br>
+            <a href="https://m.tb.cn/h.giR3JiX" target="_blank">【下单链接】https://m.tb.cn/h.giR3JiX</a>
+            <br>
+            <div class="yangmaochang">
+                <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
+                <b style="display:inline-block;border:2px rgb(112,173,71) solid;border-radius:5px;padding:2px 4px;cursor:pointer;"
+                    onclick="clip(this);" tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/">点击下单链接/<br>点击此处复制淘口令</b><br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                打开淘宝查看商品<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                下单购买商品，先不付款<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                截屏发给吞金兽驯兽师<br>
+                并在客服留言#吞金兽驯兽师<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                商家后台改价<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                👍付款完成购买
+            </div>
+        </div>
+        <!--end of tab4-->
+    </div>
 </body>
+
 </html>
