--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="攀爬架, 爬爬架, quadro, 好好搭,吞金兽驯兽师">
     <meta name="apple-mobile-web-app-title" content="羊毛厂">
     <style>
+        body{
+            font-size:24px;
+        }
         .tab-btn-area {
             display: flex;
         }
@@ -40,17 +43,35 @@
             text-align: center;
             border-radius: 10px;
             padding: 10px 20px;
-            width: fit-content;
+            width: 50%;
             margin:10px;
         }
 
         .tab-page>img {
             display:block;
-            max-width: 100%;
-            max-height: 100%;
+            width: 90vw;
+            max-height: 90vh;
+        }
+
+        a{
+            cursor:pointer;
+            font-size:30px;
+        }
+
+        .taobao{
+            font-size:30px;
+            display:inline-block;
+            border:2px rgb(112,173,71) solid;
+            border-radius:5px;
+            padding:2px 4px;
+            cursor:pointer;
         }
     </style>
     <script>
+        window.addEventListener('load', changeImageWidth);
+        function changeImageWidth(){
+
+        }
         function showTab(n) {
             const tabBtns = document.getElementsByClassName("tab-btn");
             const tabPages = document.getElementsByClassName("tab-page");
@@ -82,64 +103,59 @@
     </div>
     <div class="tab-btn-area">
         <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
-        <div class="tab-btn" onclick="showTab(1)">选品二<br></div>
+        <div class="tab-btn" onclick="showTab(1)">选品二<br>世纪童年</div>
         <div class="tab-btn" onclick="showTab(2)">选品三<br>过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
             <img src="1quadroDE.webp" />
-            <a href="https://m.tb.cn/h.giP1tJM" target="_blank">【下单链接】https://m.tb.cn/h.giP1tJM</a>
+            <p>请先加微信“驯兽师羊毛厂”询问价格</p>
+            <img src="4weixin.webp" style="width:50%"/>
+            <hr>
+            <a href="https://m.tb.cn/h.giP1tJM" target="_blank">【店铺链接】https://m.tb.cn/h.giP1tJM</a>
+            <div class="yangmaochang">
+                <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
+                <b class="taobao"
+                    onclick="clip(this)" tb-code="8$7XF931fr6Mz$:// MU6304">点击上方链接/<br>点击此处复制淘口令</b><br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                打开淘宝查看商品<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                下单购买商品，先不付款<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                截屏发给吞金兽驯兽师<br>
+                并在客服留言#吞金兽驯兽师<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                商家后台改价<br>
+                <span style="color:rgb(112,173,71)">▼</span><br>
+                👍付款完成购买
+            </div>
+            <hr>
+            <p>加入微信群“驯兽师羊毛厂”了解更多活动</p>
+            <img src="1weixinqun.webp" style="width:50%"/>
         </div>
         <!--end of tab1-->
         <div class="tab-page">
-            <img src="2shiji.webp" />
-            <img src="2yangmao.webp" />
-            <img src="2kuaituantuan.webp" />
+            <img id="img2-1" src="2shiji.webp" />
+            <img id="img2-2" src="2yangmao.webp" />
+            <p>微信扫描二维码进入快团团小程序购买</p>
+            <img src="2kuaituantuan2.webp" style="width:50%"/>
+            <hr>
+            <p>加微信“驯兽师羊毛厂”了解更多活动</p>
+            <img src="4weixin.webp" style="display:inline-block;width:45%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:45%"/>
         </div>
         <!--end of tab2-->
         <div class="tab-page">
             <img src="3shi.webp" /><br>
-            <a href="https://m.tb.cn/h.g7BZMq8" target="_blank">【下单链接】https://m.tb.cn/h.g7BZMq8</a>
-            <br>
-            <div class="yangmaochang">
-                <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
-                <b style="display:inline-block;border:2px rgb(112,173,71) solid;border-radius:5px;padding:2px 4px;cursor:pointer;"
-                    onclick="clip(this);" tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/">点击下单链接/<br>点击此处复制淘口令</b><br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                打开淘宝查看商品<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                下单购买商品，先不付款<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                截屏发给吞金兽驯兽师<br>
-                并在客服留言#吞金兽驯兽师<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                商家后台改价<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                👍付款完成购买
-            </div>
+            <a href="https://m.tb.cn/h.g7BZMq8" target="_blank">【商品链接】https://m.tb.cn/h.g7BZMq8</a><br><br>
+            <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
             <img src="3dangang.webp" /><br>
-            <a href="https://m.tb.cn/h.giR3JiX" target="_blank">【下单链接】https://m.tb.cn/h.giR3JiX</a>
-            <br>
-            <div class="yangmaochang">
-                <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
-                <b style="display:inline-block;border:2px rgb(112,173,71) solid;border-radius:5px;padding:2px 4px;cursor:pointer;"
-                    onclick="clip(this);" tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/">点击下单链接/<br>点击此处复制淘口令</b><br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                打开淘宝查看商品<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                下单购买商品，先不付款<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                截屏发给吞金兽驯兽师<br>
-                并在客服留言#吞金兽驯兽师<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                商家后台改价<br>
-                <span style="color:rgb(112,173,71)">▼</span><br>
-                👍付款完成购买
-            </div>
+            <a href="https://m.tb.cn/h.giR3JiX" target="_blank">【商品链接】https://m.tb.cn/h.giR3JiX</a><br><br>
+            <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
     </div>
