--- a/index.html
+++ b/index.html
@@ -103,17 +103,18 @@
     </div>
     <div class="tab-btn-area">
         <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
-        <div class="tab-btn" onclick="showTab(1)">选品二<br>世纪童年</div>
+        <div class="tab-btn" onclick="showTab(1)">选品二<br>国产元老世纪童年</div>
         <div class="tab-btn" onclick="showTab(2)">选品三<br>过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
-            <img src="1quadroDE.webp" />
-            <p>请先加微信“驯兽师羊毛厂”询问价格</p>
-            <img src="4weixin.webp" style="width:50%"/>
+            <img src="1quadroDE.webp" style="width:50%"/>
+            <p>问询价格或建议请小红书留言或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
+            <img src="4weixin.webp" style="display:inline-block;width:45%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:45%"/>
             <hr>
-            <a href="https://m.tb.cn/h.giP1tJM" target="_blank">【店铺链接】https://m.tb.cn/h.giP1tJM</a>
+
             <div class="yangmaochang">
                 <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
                 <b class="taobao"
@@ -131,30 +132,27 @@
                 👍付款完成购买
             </div>
             <hr>
-            <p>加入微信群“驯兽师羊毛厂”了解更多活动</p>
-            <img src="1weixinqun.webp" style="width:50%"/>
+
         </div>
         <!--end of tab1-->
         <div class="tab-page">
-            <img id="img2-1" src="2shiji.webp" />
-            <img id="img2-2" src="2yangmao.webp" />
-            <p>微信扫描二维码进入快团团小程序购买</p>
-            <img src="2kuaituantuan2.webp" style="width:50%"/>
+            <img id="img2-1" src="2shiji.webp" style="width:45%"/>
+            <img id="img2-2" src="2yangmao.webp" style="width:45%"/>
+            <p>长按二维码进入快团团小程序购买</p>
+            <img src="2kuaituantuan2.webp" style="width:45%"/>
             <hr>
-            <p>加微信“驯兽师羊毛厂”了解更多活动</p>
+            <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
             <img src="4weixin.webp" style="display:inline-block;width:45%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:45%"/>
         </div>
         <!--end of tab2-->
         <div class="tab-page">
             <img src="3shi.webp" /><br>
-            <a href="https://m.tb.cn/h.g7BZMq8" target="_blank">【商品链接】https://m.tb.cn/h.g7BZMq8</a><br><br>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
             <img src="3dangang.webp" /><br>
-            <a href="https://m.tb.cn/h.giR3JiX" target="_blank">【商品链接】https://m.tb.cn/h.giR3JiX</a><br><br>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
