--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <body>
     <div class="logo">
-        <img src="logo.webp" style="width:50%" />
+        <img src="logo.webp" style="width:60%" />
     </div>
     <div class="tab-btn-area">
         <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
@@ -109,10 +109,12 @@
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
+            <p>限时优惠活动</p>
             <img src="1quadroDE.webp" style="width:50%"/>
-            <p>问询价格或建议请小红书留言或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
-            <img src="4weixin.webp" style="display:inline-block;width:45%"/>
-            <img src="1weixinqun.webp" style="display:inline-block;width:45%"/>
+            <p>羊毛厂专属优惠</p>
+            <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
+            <img src="4weixin.webp" style="display:inline-block;width:30%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
 
             <div class="yangmaochang">
@@ -136,14 +138,16 @@
         </div>
         <!--end of tab1-->
         <div class="tab-page">
+            <p>限时优惠活动</p>
             <img id="img2-1" src="2shiji.webp" style="width:45%"/>
+            <p>羊毛厂专属套装及优惠</p>
             <img id="img2-2" src="2yangmao.webp" style="width:45%"/>
             <p>长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:45%"/>
             <hr>
             <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
-            <img src="4weixin.webp" style="display:inline-block;width:45%"/>
-            <img src="1weixinqun.webp" style="display:inline-block;width:45%"/>
+            <img src="4weixin.webp" style="display:inline-block;width:30%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
         </div>
         <!--end of tab2-->
         <div class="tab-page">
