--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <!--end of tab1-->
         <div class="tab-page">
-            <p>限时优惠活动</p>
+             <div style="font-size:1.8em;">限时优惠活动</div>
             <img id="img2-1" src="2shiji.webp" style="width:45%"/>
             <p>羊毛厂专属套装及优惠</p>
             <img id="img2-2" src="2yangmao.webp" style="width:45%"/>
