--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
     <div class="tab-btn-area">
         <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
         <div class="tab-btn" onclick="showTab(1)">选品二<br>国产元老世纪童年</div>
-        <div class="tab-btn" onclick="showTab(2)">选品三<br>过河石</div>
+        <div class="tab-btn" onclick="showTab(2)">选品三<br>国产过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
-            <p>限时优惠活动</p>
-            <img src="1quadroDE.webp" style="width:50%"/>
-            <p>羊毛厂专属优惠</p>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
+            <img src="1quadroDE.webp" style="size:50%"/>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
-            <img src="4weixin.webp" style="display:inline-block;width:30%"/>
-            <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
+            <img src="4weixin.webp" style="display:inline-block;size:30%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;size:30%"/>
             <hr>
 
             <div class="yangmaochang">
@@ -138,9 +139,9 @@
         </div>
         <!--end of tab1-->
         <div class="tab-page">
-             <div style="font-size:1.8em;">限时优惠活动</div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
             <img id="img2-1" src="2shiji.webp" style="width:45%"/>
-            <p>羊毛厂专属套装及优惠</p>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <img id="img2-2" src="2yangmao.webp" style="width:45%"/>
             <p>长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:45%"/>
