--- a/index.html
+++ b/index.html
@@ -111,14 +111,15 @@
         <div class="tab-page active">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
             <img src="1quadroDE.webp" style="size:50%"/>
+            <p>双击图片变大</p>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
-            <img src="4weixin.webp" style="display:inline-block;size:30%"/>
-            <img src="1weixinqun.webp" style="display:inline-block;size:30%"/>
+            <img src="4weixin.webp" style="display:inline-block;width:30%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
 
-            <div class="yangmaochang">
+            <div class="yangmaochang" style="font-size:1.5em;>
                 <b style="color:rgb(112,173,71)">如何获取羊毛厂优惠？</b><br><br>
                 <b class="taobao"
                     onclick="clip(this)" tb-code="8$7XF931fr6Mz$:// MU6304">点击上方链接/<br>点击此处复制淘口令</b><br>
@@ -140,11 +141,14 @@
         <!--end of tab1-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <img id="img2-1" src="2shiji.webp" style="width:45%"/>
+            <img id="img2-1" src="2shiji.webp" style="size:50%"/>
+            <p>双击图片变大</p>
+            <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <img id="img2-2" src="2yangmao.webp" style="width:45%"/>
+            <img id="img2-2" src="2yangmao.webp" style="size:50%"/>
+            <p>双击图片变大</p>
             <p>长按二维码进入快团团小程序购买</p>
-            <img src="2kuaituantuan2.webp" style="width:45%"/>
+            <img src="2kuaituantuan2.webp" style="width:30%"/>
             <hr>
             <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
