--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
             <img id="img2-2" src="2yangmao.webp" style="size:50%"/>
 
-            <p>长按二维码进入快团团小程序购买</p>
+            <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%"/>
             <hr>
             <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
