--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <img src="1quadroDE.webp" style="size:50%"/>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或长按下面二维码+驯兽师羊毛厂微信或群聊</p>
+            <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
