--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="description" content="羊毛厂">
-    <meta name="keywords" content="攀爬架, 爬爬架, quadro, 好好搭,吞金兽驯兽师">
+    <meta name="keywords" content="攀爬架, 爬爬架, quadro, 吞金兽驯兽师，驯兽师羊毛厂">
     <meta name="apple-mobile-web-app-title" content="羊毛厂">
     <style>
         body{
@@ -106,6 +106,7 @@
         <div class="tab-btn" onclick="showTab(1)">选品二<br>国产元老世纪童年</div>
         <div class="tab-btn" onclick="showTab(2)">选品三<br>国产过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
+        <div class="tab-btn" onclick="showTab(4)">选品四<br>吊桥绳</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -140,7 +141,7 @@
         <!--end of tab1-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <img id="img2-1" src="2shiji.webp" style="size:50%"/>
+            <p>暂无</p>
 
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
@@ -164,6 +165,12 @@
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
+        <div class="tab-page">
+            <img src="3sheng.webp" /><br>
+            <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
+            <div tb-code="1$mo2z3XcG0Fj$://MU6304" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab5-->
     </div>
 </body>
 
