--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         <div class="tab-btn" onclick="showTab(2)">选品三<br>国产过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
         <div class="tab-btn" onclick="showTab(4)">选品五<br>吊桥绳</div>
+        <div class="tab-btn" onclick="showTab(4)">选品六<br>海洋球</div>
+        <div class="tab-btn" onclick="showTab(4)">选品七<br>秋千</div>
+        <div class="tab-btn" onclick="showTab(4)">选品八<br>大颗粒积木板</div>
+        
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -161,16 +165,22 @@
         </div>
         <!--end of tab3-->
         <div class="tab-page">
-            <img src="3dangang.webp" /><br>
+            <img src="4dangang.webp" /><br>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
         <div class="tab-page">
-            <img src="3sheng.webp" /><br>
+            <img src="5sheng.webp" /><br>
             <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
+        <div class="tab-page">
+            <img src="5sheng.webp" /><br>
+            <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
+            <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab6-->
     </div>
 </body>
 
