--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="tab-btn" onclick="showTab(4)">选品六<br>海洋球</div>
         <div class="tab-btn" onclick="showTab(4)">选品七<br>秋千</div>
         <div class="tab-btn" onclick="showTab(4)">选品八<br>大颗粒积木板</div>
-        
+        <div class="tab-btn" onclick="showTab(4)">选品九<br>收纳盒</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -176,11 +176,33 @@
         </div>
         <!--end of tab5-->
         <div class="tab-page">
-            <img src="5sheng.webp" /><br>
-            <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
-            <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <img src="6haiyangqiu.png" /><br>
+            <p>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</p>
+            <div tb-code="6Fu😊zhi2(NLuR3XJNLAo):// CA1501,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab6-->
+        <div class="tab-page">
+            <img src="7qiuqian1.jpg" /><br>
+            <p>适合小娃，样式方便收纳不占空间</p>
+            <div tb-code="8覆👋ZHI9(hSlw3XJNtpw):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <img src="7qiuqian2.jpg" /><br>
+            <p>适合大娃，简单方便易收纳</p>
+            <div tb-code="6覆👋ZHI7(EPp73XJmASr):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab7-->
+        <div class="tab-page">
+            <img src="8jimuban.jpg" /><br>
+            <p>可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</p>
+            <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab8-->
+        <div class="tab-page">
+            <img src="9penzi.jpg" /><br>
+            <p>Vassel这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳</p>
+            <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab9-->
     </div>
 </body>
 
