--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@
     <div class="tab-page-area">
         <div class="tab-page active">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <img src="1quadroDE.webp" style="size:50%"/>
+            <p>暂无</p>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <p>其他套装和配件也有羊毛厂专属价格<br>详情请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
+             <img id="img2-2" src="1taobao.jpg" style="size:50%"/>
+            <p>详情请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
@@ -126,7 +127,7 @@
             <div class="yangmaochang" style="font-size:1.5em;>
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
                 <b class="taobao"
-                    onclick="clip(this)" tb-code="8$7XF931fr6Mz$:// MU6304">点击上方链接/<br>点击此处复制淘口令</b><br>
+                    onclick="clip(this)" tb-code="8$7XF931fr6Mz$:// MU6304">点击此处复制淘口令</b><br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
@@ -149,7 +150,7 @@
 
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <img id="img2-2" src="2yangmao.webp" style="size:50%"/>
+            <img id="img2-2" src="2yangmao.jpg" style="size:50%"/>
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%"/>
