--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <!--end of tab8-->
         <div class="tab-page">
             <img src="9penzi.jpg" /><br>
-            <p>Vassel这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳</p>
+            <p>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳</p>
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab9-->
