--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         a{
             cursor:pointer;
-            font-size:30px;
+            font-size:20px;
         }
 
         .taobao{
@@ -110,7 +110,7 @@
         <div class="tab-btn" onclick="showTab(5)">选品六<br>海洋球</div>
         <div class="tab-btn" onclick="showTab(6)">选品七<br>秋千</div>
         <div class="tab-btn" onclick="showTab(7)">选品八<br>大颗粒积木板</div>
-        <div class="tab-btn" onclick="showTab(8)">选品九<br>收纳盒</div>
+        <div class="tab-btn" onclick="showTab(8)">选品九<br>游戏/收纳盒</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -161,47 +161,58 @@
         </div>
         <!--end of tab2-->
         <div class="tab-page">
-            <img src="3shi.webp" /><br>
+            <img src="3shi.webp" style="size:50%"/><br>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
-            <img src="4dangang.webp" /><br>
+            <img src="4dangang.webp" style="size:50%"/><br>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
         <div class="tab-page">
-            <img src="5sheng.webp" /><br>
+            <img src="5sheng.webp" style="size:50%"/><br>
             <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
-            <img src="6haiyangqiu.png" /><br>
+            <img src="6haiyangqiu.png" style="size:50%"/><br>
             <p>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</p>
             <div tb-code="6Fu😊zhi2(NLuR3XJNLAo):// CA1501,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab6-->
         <div class="tab-page">
-            <img src="7qiuqian1.jpg" /><br>
+            <img src="7qiuqian1.jpg" style="size:50%"/><br>
             <p>适合小娃，样式方便收纳不占空间</p>
             <div tb-code="8覆👋ZHI9(hSlw3XJNtpw):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
-            <img src="7qiuqian2.jpg" /><br>
+            <img src="7qiuqian2.jpg" style="size:50%"/><br>
             <p>适合大娃，简单方便易收纳</p>
             <div tb-code="6覆👋ZHI7(EPp73XJmASr):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab7-->
         <div class="tab-page">
-            <img src="8jimuban.jpg" /><br>
+            <img src="8jimuban.jpg" style="size:50%"/><br>
             <p>可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</p>
             <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab8-->
         <div class="tab-page">
-            <img src="9penzi.jpg" /><br>
-            <p>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳</p>
+            <img src="9penzi.jpg" style="size:50%"/><br>
+            <p>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</p>
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <p>作为可以放在架子上的收纳，更推荐以下三种</p>
+            <img src="9shouna3.jpg" style="display:inline-block;width:30%"/>
+            <img src="9shouna4.jpg" style="display:inline-block;width:30%"/>
+            <p>慧儿推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</p>
+            <div tb-code="1Fu😊zhi3(5Z0x32aLx2D):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <img src="9shouna1.jpg" style="display:inline-block;width:30%"/>
+            <img src="9shouna2.jpg" style="display:inline-block;width:30%"/>
+            <p>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</p>
+            <div tb-code="2輹👋Zhi3(fgYq32aKcDd):// MF1001,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div> 
+            <div tb-code="3輹👋Zhi9(2zcL32aKiDr):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div> 
         </div>
         <!--end of tab9-->
     </div>
