--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
         body{
             font-size:24px;
         }
-        .tab-btn-area {
-            display: flex;
-        }
-
         .tab-btn {
             cursor: pointer;
-            display: flex;
+            display: inline-block;
             align-items: center;
             justify-content: center;
             font-size: 20px;
@@ -24,6 +20,7 @@
             text-align: center;
             padding: 5px 10px;
             margin: 10px;
+            min-width: 100px;
         }
 
         .tab-btn.active {
