--- a/index.html
+++ b/index.html
@@ -191,8 +191,11 @@
         </div>
         <!--end of tab7-->
         <div class="tab-page">
+            <p>Lego原版底板，得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</p>
+            <img src="8lego.jpg" style="size:50%"/><br>
+            <div tb-code="3Fu😊zhi2(79et328t4Sa):// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+             <p>平替底板，适配得宝</p>
             <img src="8jimuban.jpg" style="size:50%"/><br>
-            <p>可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</p>
             <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab8-->
@@ -202,16 +205,18 @@
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <p>作为可以放在架子上的收纳，更推荐以下三种</p>
+            <p>作为可以放在架子上的收纳，更推荐以下两种</p>
             <img src="9shouna3.jpg" style="display:inline-block;width:50%"/>
             <img src="9shouna4.jpg" style="display:inline-block;width:50%"/>
             <p>慧儿推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</p>
             <div tb-code="1Fu😊zhi3(5Z0x32aLx2D):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
-            <img src="9shouna1.jpg" style="display:inline-block;width:50%"/>
-            <img src="9shouna2.jpg" style="display:inline-block;width:50%"/>
+            
+            <img src="9shouna5.jpg" style="size:50%"/>
             <p>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</p>
-            <div tb-code="2輹👋Zhi3(fgYq32aKcDd):// MF1001,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div> 
+            <img src="9shouna1.jpg" style="size:40%"/>
+            <div tb-code="2輹👋Zhi3(fgYq32aKcDd):// MF1001,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <img src="9shouna2.jpg" style="size:40%"/>
             <div tb-code="3輹👋Zhi9(2zcL32aKiDr):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div> 
         </div>
         <!--end of tab9-->
