--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
         <div class="tab-btn" onclick="showTab(6)">选品七<br>秋千</div>
         <div class="tab-btn" onclick="showTab(7)">选品八<br>大颗粒积木板</div>
         <div class="tab-btn" onclick="showTab(8)">选品九<br>游戏/收纳盒</div>
-        <div class="tab-btn" onclick="showTab(9)">选品十<br>亚克力蜡笔</div>        
+        <div class="tab-btn" onclick="showTab(9)">选品十<br>亚克力相关</div> 
+        <div class="tab-btn" onclick="showTab(10)">选品十一<br>铝管</div> 
+        <div class="tab-btn" onclick="showTab(11)">选品十二<br>洞洞板相关</div> 
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -116,7 +118,7 @@
             <p>暂无</p>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-             <img id="img2-2" src="1taobao.jpg" style="size:50%"/>
+             <img id="img2-2" src="1taobao.webp" style="width:50%"/>
             <p>详情请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
@@ -148,7 +150,7 @@
 
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <img id="img2-2" src="2yangmao.jpg" style="size:50%"/>
+            <img id="img2-2" src="2yangmao.webp" style="width:50%"/>
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%"/>
@@ -159,75 +161,95 @@
         </div>
         <!--end of tab2-->
         <div class="tab-page">
-            <img src="3shi.webp" style="size:50%"/><br>
+            <img src="3shi.webp" style="width:50%"/><br>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
-            <img src="4dangang.webp" style="size:40%"/><br>
+            <img src="4dangang.webp" style="width:40%"/><br>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
         <div class="tab-page">
-            <img src="5sheng.webp" style="size:40%"/><br>
+            <img src="5sheng.webp" style="width:40%"/><br>
             <p>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</p>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
-            <img src="6haiyangqiu.png" style="size:40%"/><br>
+            <img src="6haiyangqiu.webp" style="width:40%"/><br>
             <p>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</p>
             <div tb-code="6Fu😊zhi2(NLuR3XJNLAo):// CA1501,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab6-->
         <div class="tab-page">
-            <img src="7qiuqian1.jpg" style="size:40%"/><br>
+            <img src="7qiuqian1.webp" style="width:40%"/><br>
             <p>适合小娃，样式方便收纳不占空间</p>
             <div tb-code="8覆👋ZHI9(hSlw3XJNtpw):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <img src="7qiuqian2.jpg" style="size:40%"/><br>
+            <img src="7qiuqian2.webp" style="width:40%"/><br>
             <p>适合大娃，简单方便易收纳</p>
             <div tb-code="6覆👋ZHI7(EPp73XJmASr):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab7-->
         <div class="tab-page">
             <p>Lego原版底板，得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</p>
-            <img src="8lego.jpg" style="size:40%"/><br>
+            <img src="8lego.webp" style="width:40%"/><br>
             <div tb-code="3Fu😊zhi2(79et328t4Sa):// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <p>平替底板，适配得宝</p>
-            <img src="8jimuban.jpg" style="size:40%"/><br>
+            <img src="8jimuban.webp" style="width:40%"/><br>
             <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab8-->
         <div class="tab-page">
-            <img src="9penzi.jpg" style="size:40%"/><br>
+            <img src="9penzi.webp" style="width:40%"/><br>
             <p>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</p>
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
             <p>作为可以放在架子上的收纳，更推荐以下两种</p>
-            <img src="9shouna3.jpg" style="display:inline-block;width:50%"/>
-            <img src="9shouna4.jpg" style="display:inline-block;width:50%"/>
+            <img src="9shouna3.webp" style="display:inline-block;width:50%"/>
+            <img src="9shouna4.webp" style="display:inline-block;width:50%"/>
             <p>慧儿推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</p>
             <div tb-code="1Fu😊zhi3(5Z0x32aLx2D):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             
-            <img src="9shouna5.jpg" style="size:40%"/>
+            <img src="9shouna5.webp" style="width:40%"/>
             <p>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</p>
-            <img src="9shouna1.jpg" style="size:40%"/>
+            <img src="9shouna1.webp" style="width:40%"/>
             <div tb-code="2輹👋Zhi3(fgYq32aKcDd):// MF1001,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
-            <img src="9shouna2.jpg" style="size:40%"/>
+            <img src="9shouna2.webp" style="width:40%"/>
             <div tb-code="3輹👋Zhi9(2zcL32aKiDr):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div> 
         </div>
         <!--end of tab9-->
         <div class="tab-page">
-            <img src="10bi.jpg" style="display:inline-block;width:40%"/>
-            <img src="10bi2.jpg" style="display:inline-block;width:40%"/>
+            <img src="10bi.webp" style="display:inline-block;width:40%"/>
+            <img src="10bi2.webp" style="display:inline-block;width:40%"/>
             <p>在亚克力板上显色较为清楚，容易擦洗</p>
             <div tb-code="5覆👋ZHI1(9mOb32bVPiy):// HU7709,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab10-->
+        <div class="tab-page">
+            <img src="11lvguan.webp" style="width:40%"/>
+            <p>请联系客服选择外径27mm,长度为78cm的铝管，预备4-6根合适</p>
+            <div tb-code="2fu😄質7(P6JY3droUNN):// HU7177,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab11-->
+        <div class="tab-page">
+            <img src="12dongdongban1.webp" style="width:40%"/>
+            <div tb-code="2fu😄質7(P6JY3droUNN):// HU7177,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <br>
+            <img src="12dongdongban3.webp" style="width:40%"/>
+            <div tb-code="2覆👋ZHI3(1SQU3drKWYV):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <br>
+            <img src="12dongdongban2.webp" style="width:40%"/>
+            <div tb-code="2輹👋Zhi7(CYys3drKMw0):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        </div>
+        <!--end of tab12-->
     </div>
 </body>
 
