--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
         </div>
         <!--end of tab9-->
         <div class="tab-page">
+            <img src="10zhadai.webp" style="width:40%"/>
+            <p>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</p>
+            <div tb-code="4輹👋Zhi8(Klax3drrNdg):// HU7709,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <br>
             <img src="10bi.webp" style="display:inline-block;width:40%"/>
             <img src="10bi2.webp" style="display:inline-block;width:40%"/>
             <p>在亚克力板上显色较为清楚，容易擦洗</p>
